--- a/.github/workflows/test-runners.js.yml
+++ b/.github/workflows/test-runners.js.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-
+    name:jest-runner
     runs-on: ubuntu-latest
 
     strategy:
@@ -25,7 +25,5 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - run: yarn install
+    - run: yarn test
