--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "next": "14.2.33",
+    "prisma": "^6.18.0",
     "react": "^18",
     "react-dom": "^18",
     "ts-jest": "^29.4.5"
